--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.7.2
-python-multipart==0.0.9
-requests==2.31.0
-aiofiles==23.2.1
-python-dotenv==1.1.0fastmcp>=2.8.1
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+pydantic>=2.10.0
+python-multipart>=0.0.12
+requests>=2.32.0
+aiofiles>=24.1.0
+python-dotenv>=1.0.1
+fastmcp>=2.8.1
