--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ PORT=8000
 MCP_DEFAULT_PROTOCOL=stdio
 MCP_MAX_CONNECTIONS=100
 MCP_TIMEOUT=30
+MCPCAT_CONFIG_PATH=config.json
 
 # 日志配置
 LOG_LEVEL=INFO
