--- a/config.json
+++ b/config.json
@@ -32,5 +32,15 @@
       "-y",
       "@modelcontextprotocol/server-sequential-thinking"
     ]
+  },
+  "time": {
+    "type": "stdio",
+    "command": "uvx",
+    "args": [
+      "mcp-server-time",
+      "--local-timezone=Asia/Shanghai"
+    ],
+    "env": {},
+    "timeout": 30
   }
 }
