--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
         "methods": [
           "GET"
         ],
-        "pattern": "^/user/protect/userManage/.*"
+        "pattern": "^/user/.*"
       }
     ]
   },
