--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - APP_NAME=MCPCat
+      - APP_NAME=mcpcat
       - APP_VERSION=0.1.1
       - HOST=0.0.0.0
       - PORT=8000
