--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,10 @@ services:
       - HOST=0.0.0.0
       - PORT=8000
       - LOG_LEVEL=INFO
-      - MCPCAT_CONFIG_PATH=/app/config.json
+      - MCPCAT_CONFIG_PATH=/app/.mcpcat/config.json
     volumes:
-      # 挂载配置文件（默认从宿主机挂载）
-      - ./config.json:/app/config.json:ro
-      # 挂载日志目录
-      - ./logs:/app/logs
-      # 挂载数据目录（可选）
-      - ./data:/app/data
+      # 挂载配置目录（默认从宿主机挂载）
+      - ./.mcpcat:/app/.mcpcat
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
