--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,6 @@ PORT=8000
 # 日志配置
 LOG_LEVEL=INFO
 
-# 安全配置
-# 可选：设置默认API Key（如果不设置，系统会自动生成）
+# 默认 API Key 配置（可选，不设置则系统自动生成随机值）
 # MCPCAT_DEFAULT_ADMIN_KEY=your-admin-key-here
 # MCPCAT_DEFAULT_READ_KEY=your-read-key-here
