--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - PORT=8000
       - LOG_LEVEL=INFO
       - MCPCAT_CONFIG_PATH=/app/.mcpcat/config.json
-      # 可选：设置默认API Key
+      # 默认 API Key 配置（可选，不设置则系统自动生成随机值）
       # - MCPCAT_DEFAULT_ADMIN_KEY=your-admin-key
       # - MCPCAT_DEFAULT_READ_KEY=your-read-key
     volumes:
