feat(README): 添加项目Logo和居中布局
在README文件中添加了mcpcat项目的Logo图片，并使用div标签实现内容居中对齐，
提升了文档的视觉效果和专业性。同时保持原有的项目介绍内容不变。

feat(docker): 优化Docker配置的端口映射

将docker-compose.yml中的端口映射从固定变量改为可配置的host_port和container_port
变量，提供了更灵活的端口配置选项，便于用户自定义主机和容器端口映射关系。
```

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: jeweis/mcpcat:latest
     container_name: mcpcat-app
     ports:
-      - "${APP_PORT:-8000}:8000"
+      - "${host_port:-8000}:${container_port:-8000}"
     environment:
       - APP_NAME=mcpcat
       - APP_VERSION=0.1.1
